<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.food.CustomFoodActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/ingredients"
                android:textSize="30sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingredients"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/nutrition"
                android:textSize="30sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <com.example.cs309android.views.CustomNutritionItemView
                        android:id="@+id/calories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/total_calories"
                        custom:name="@string/calories" />

                    <com.example.cs309android.views.CustomNutritionItemView
                        android:id="@+id/fat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/total_fat"
                        custom:name="@string/fat" />

                    <com.example.cs309android.views.CustomNutritionItemView
                        android:id="@+id/carbs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/total_carbs"
                        custom:name="@string/carbs" />

                    <com.example.cs309android.views.CustomNutritionItemView
                        android:id="@+id/protein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:hint="@string/total_protein"
                        custom:name="@string/protein" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_item"
        style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:contentDescription="@string/add_item"
        android:elevation="0dp"
        android:text="@string/add_item"
        app:fabSize="auto"
        app:icon="@drawable/ic_add"
        app:tint="?attr/colorOnSecondaryContainer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/spinnerBlocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:backgroundTint="?android:colorBackground"
        android:visibility="gone"
        android:fitsSystemWindows="false"
        android:elevation="50dp">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:elevation="51dp"
            android:indeterminateTint="?colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
